--- a/lit_survey/lit_survey.tex
+++ b/lit_survey/lit_survey.tex
@@ -404,6 +404,26 @@ framework.
         	Z. Xu. RCFile: A Fast and Space-efficient Data Placement
         	Structure in MapReduce-based Warehouse Systems. In ICDE, 2011.
 
+\bibitem{ref:lossless-cluster}	Balakrishnan, R.; Sahoo, R.K., "Lossless compression 
+		for large scale cluster logs," Parallel and Distributed Processing 
+		Symposium, 2006. IPDPS 2006. 20th International , vol., no., pp.7 pp., 
+		25-29 April 2006 doi: 10.1109/IPDPS.2006.1639692
+		URL: http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=1639692&isnumber=34366
+
+\bibitem{ref:entropy-compression} Vijayshankar Raman and Garret Swart. 2006. How to 
+		wring a table dry: entropy compression of relations and querying of 
+		compressed relations. In Proceedings of the 32nd international conference 
+		on Very large data bases (VLDB '06), Umeshwar Dayal, Khu-Yong Whang, 
+		David Lomet, Gustavo Alonso, Guy Lohman, Martin Kersten, Sang K. Cha, 
+		and Young-Kuk Kim (Eds.). VLDB Endowment 858-869.
+
+\bibitem{ref:web-compression} Jacopo Urbani, Jason Maassen, and Henri Bal. 2010. Massive 
+		Semantic Web data compression with MapReduce. In Proceedings of the 19th 
+		ACM International Symposium on High Performance Distributed Computing 
+		(HPDC '10). ACM, New York, NY, USA, 795-802. DOI=10.1145/1851476.1851591 
+	       	http://doi.acm.org/10.1145/1851476.1851591	
+
+
 \end{thebibliography}
 }
 \end{document}
