--- a/lit_survey/lit_survey.tex
+++ b/lit_survey/lit_survey.tex
@@ -408,7 +408,7 @@ framework.
 		for large scale cluster logs," Parallel and Distributed Processing 
 		Symposium, 2006. IPDPS 2006. 20th International , vol., no., pp.7 pp., 
 		25-29 April 2006 doi: 10.1109/IPDPS.2006.1639692
-		URL: http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=1639692&isnumber=34366
+		URL: http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=\&arnumber=1639692\&isnumber=34366
 
 \bibitem{ref:entropy-compression} Vijayshankar Raman and Garret Swart. 2006. How to 
 		wring a table dry: entropy compression of relations and querying of 
